rewrite challenge pages as markdown

--- a/src/challenges/2025-04-14-strange.md
+++ b/src/challenges/2025-04-14-strange.md
@@ -5,23 +5,28 @@ nocomments: true
 ---
 
 <section class="challenge challenge-intro">
-{% markdown %}
+
 ## April 2025: The solo section from "Strange" by Joe Satriani
 
 * **The challenge**: There are two frenetic solos stacked back-to-back in the middle of Satriani's "[Strange](https://song.link/gb/i/407604565)". That's right, it's a back-to-back Satch-attack stack track, Jack. Our heroes must play each solo end-to-end with no stitching, but it **is** OK if they are from separate takes.
-{% endmarkdown %}
+
 </section>
 
 <section class="challenge challenge-entries">
 
-  <div class="entry entry-awaiting">
-    <h3>Player 1</h3>
-    <p>awaiting entry</p>
-  </div>
+<div class="entry entry-awaiting">
 
-  <div class="entry entry-awaiting">
-    <h3>Player 2</h3>
-    <p>awaiting entry</p>
-  </div>
+### Player 1
 
+awaiting entry
+
+</div>
+
+<div class="entry entry-awaiting">
+
+### Player 2
+
+awaiting entry
+
+</div>
 </section>
