update Strange challenge with entries - huzzah

--- a/src/challenges/2025-04-14-strange.md
+++ b/src/challenges/2025-04-14-strange.md
@@ -1,7 +1,6 @@
 ---
 layout: challenge.njk
 bodyclass: challenge
-nocomments: true
 ---
 
 <section class="challenge challenge-intro">
@@ -14,19 +13,42 @@ nocomments: true
 
 <section class="challenge challenge-entries">
 
-<div class="entry entry-awaiting">
+<div class="entry entry-cf">
 
-### Player 1
+### Player 1: Cussons Fiasco
 
-awaiting entry
+<iframe src="https://www.youtube-nocookie.com/embed/UVESxjx78gw?si=gKS_juZVszDJbufZ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+### CF says:
+
+> I just couldn't get the octavey slidey lick at the end of the first solo to come together at the right time, but this take had the best vibe I could muster. I'm pretty happy with it all round.
+>
+> * Guitar: 1989 Ibanez 540PII-SH
+> * Pickups: Bare Knuckle Cobra and Juggernaut
+> * Tone: Neural DSP [Soldano SLO-100 X](https://neuraldsp.com/plugins/soldano-slo-100)
+> * Pedal: Morley Bad Horsie Wah
+> * Pick: [Gravity Razer Mini 1.5](https://gravitypicks.co.uk/shop/ols/products/razer/v/RZR-MN-1-5MM-MST)
+> * T-shirt: Rik Mayall as Lord Flashheart from Blackadder Goes Forth
 
 </div>
 
-<div class="entry entry-awaiting">
+<div class="entry entry-pf">
 
-### Player 2
+### Player 2: Pearl Fiasco
 
-awaiting entry
+<iframe src="https://www.youtube-nocookie.com/embed/CjDZBbZsWBs?si=MPV6rNZy_lxTF190" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+### PF says:
+
+> **Flying in a Blue Dream** was the first Satriani album that I got as soon as it was released. I always loved this track, but had no idea how difficult the solo was going to be until I tried to learn it.
+>
+> That lick at 0:48 is proper nasty.
+>
+> And a dropped pick for the last trill.
+>
+> * Gibson Les Paul Custom with Bare Knuckle Rebel Yells
+> * Synergy Bogner Ecstasy Red
+> * AxeFX III for everything else
 
 </div>
 </section>
