create placeholder page for next challenge

--- a/src/challenges/2025-04-14-strange.md
+++ b/src/challenges/2025-04-14-strange.md
@@ -7,7 +7,7 @@ bodyclass: challenge
 
 ## April 2025: The solo section from "Strange" by Joe Satriani
 
-* **The challenge**: There are two frenetic solos stacked back-to-back in the middle of Satriani's "[Strange](https://song.link/gb/i/407604565)". That's right, it's a back-to-back Satch-attack stack track, Jack. Our heroes must play each solo end-to-end with no stitching, but it **is** OK if they are from separate takes.
+* **The challenge**: There are two frenetic solos stacked back-to-back in the middle of Satriani's "[Strange](https://song.link/gb/i/407604565)". That's right, it's a back-to-back Satch-attack stack track, Jack. Our heroes must play each solo end-to-end with no stitching, or your money back.
 
 </section>
 
